--- a/SPRINT 2 HTML E CSS/artigos/artigos.html
+++ b/SPRINT 2 HTML E CSS/artigos/artigos.html
@@ -8,7 +8,18 @@
 </head>
 <body>
     <header>
-
+        <header> <div class="header">
+            <div class="logo"></div>
+            <h1><span class="branco">TECH</span>INSIDER</h1>
+            <div class="menu">
+              <a href="/paginal inicial/index.html">Pagina inicial</a>
+              <a href="/artigos/artigos.html">Artigos</a>
+              <a href="/comunidade/comunidade.html">Comunidade</a>
+              <a href="/newsletter/newsletter.html">Newsletter</a>
+              <a href="/sobre/sobre.html">Sobre</a>
+            </div>
+          </div>
+        </header>
     </header>
 
     <div class="content clearfix">
@@ -58,6 +69,8 @@
         </div>
 
    </div>
-
+   <div class="footer">
+    <p>TECH INSIDER - 2024 - Todos os direitos reservados.</p>
+  </div>
 </body>
 </html>
