--- a/SPRINT 2 HTML E CSS/paginal inicial/index.html
+++ b/SPRINT 2 HTML E CSS/paginal inicial/index.html
@@ -12,17 +12,19 @@
 
 <body>
 
-  <div class="header">
+  <header> <div class="header">
     <div class="logo"></div>
     <h1><span class="branco">TECH</span>INSIDER</h1>
     <div class="menu">
-      <a href="#">Pagina inicial</a>
-      <a href="#">Eletronicos</a>
-      <a href="#">Smartphones</a>
-      <a href="#">contatos</a>
-      <a href="#">Sobre</a>
+      <a href="/paginal inicial/index.html">Pagina inicial</a>
+      <a href="/artigos/artigos.html">Artigos</a>
+      <a href="/comunidade/comunidade.html">Comunidade</a>
+      <a href="/newsletter/newsletter.html">Newsletter</a>
+      <a href="/sobre/sobre.html">Sobre</a>
     </div>
   </div>
+</header>
+
 
 <div class="container">
   <div class="posts">
@@ -126,12 +128,14 @@
 </div>
 
 </div>
+</section>
 
 
 
-  <div class="footer">
-    <p>TECH INSIDER - 2024 - Todos os direitos reservados.</p>
-  </div>
+  
 
 </body>
+<div class="footer">
+  <p>TECH INSIDER - 2024 - Todos os direitos reservados.</p>
+</div>
 </html>
