paginas organizadas em pastas

--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/newsletter/newsletter.html
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/newsletter/newsletter.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <title>TECHINSIDER</title>
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
+    <link rel="shortcut icon" href="">
 </head>
 <body>
-    <header>
-
-
+    <header> <div class="header">
+        <div class="logo"></div>
+        <h1><span class="branco">TECH</span>INSIDER</h1>
+        <div class="menu">
+          <a href="/pagina inicial/index.html">Pagina inicial</a>
+          <a href="/artigos/artigos.html">Artigos</a>
+          <a href="/comunidade/comunidade.html">Comunidade</a>
+          <a href="/newsletter/newsletter.html">Newsletter</a>
+          <a href="/sobre/sobre.html">Sobre</a>
+        </div>
+      </div>
     </header>
 
     <section>
@@ -32,4 +43,8 @@
         
     </section>
 </body>
+
+<div class="footer">
+    <p>TECH INSIDER - 2024 - Todos os direitos reservados.</p>
+  </div>
 </html>
