--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/pagina inicial/index.html
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/pagina inicial/index.html
@@ -6,24 +6,24 @@
 
     <title>TECHINSIDER</title>
     <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
-    <link rel="shortcut icon" href="/PI_G1_BLOG_TECNOLOGIA/area-decanso-escritorio-google.jpg">
+    <link rel="shortcut icon" href="">
 </head>
 
 
 <body>
-
-  <div class="header">
+  <header> <div class="header">
     <div class="logo"></div>
     <h1><span class="branco">TECH</span>INSIDER</h1>
     <div class="menu">
-      <a href="#">Pagina inicial</a>
-      <a href="#">Eletronicos</a>
-      <a href="#">Smartphones</a>
-      <a href="#">contatos</a>
-      <a href="#">Sobre</a>
+      <a href="/pagina inicial/">Pagina inicial</a>
+      <a href="/artigos/artigos.html">Artigos</a>
+      <a href="/comunidade/comunidade.html">Comunidade</a>
+      <a href="/newsletter/newsletter.html">Newsletter</a>
+      <a href="/sobre/sobre.html">Sobre</a>
     </div>
   </div>
-
+</header>
+ 
 <div class="container">
   <div class="posts">
 
@@ -135,3 +135,6 @@
 
 </body>
 </html>
+
+
+css
