--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/sobre.html
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/sobre.html
@@ -3,8 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <title>TECHINSIDER</title>
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
+    <link rel="shortcut icon" href="">
 </head>
+</head>
+
+<header> <div class="header">
+    <div class="logo"></div>
+    <h1><span class="branco">TECH</span>INSIDER</h1>
+    <div class="menu">
+      <a href="/pagina inicial/index.html">Pagina inicial</a>
+      <a href="/artigos/artigos.html">Artigos</a>
+      <a href="/comunidade/comunidade.html">Comunidade</a>
+      <a href="/newsletter/newsletter.html">Newsletter</a>
+      <a href="/sobre/sobre.html">Sobre</a>
+    </div>
+  </div>
+</header>
+
 <body>
     <div>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non autem alias, quae saepe omnis dolore veritatis cumque. Recusandae quibusdam quasi maxime veniam deserunt saepe dolor maiores! Necessitatibus tenetur minus nemo?</p>
@@ -13,7 +31,7 @@
     </div>
 
     <section class="equipe">
-        <h1>Equipe</h1>
+        <h2>Equipe</h2>
         <div>
             <img src="imagens2.0/amauri.png" alt="">
             <p></p>
@@ -22,4 +40,8 @@
         </div>
     </section>
 </body>
+
+<div class="footer">
+    <p>TECH INSIDER - 2024 - Todos os direitos reservados.</p>
+  </div>
 </html>
