--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/sobre.html
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/sobre.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>TECHINSIDER</title>
-    <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
-    <link rel="shortcut icon" href="">
+  <title>TECHINSIDER</title>
+  <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+  <link rel="shortcut icon" href="">
 </head>
 </head>
 
-<header> <div class="header">
-    <div class="logo"></div>
+<header>
+  <div class="header">
+    <div class="logo">
+      <img src="/PI_G2_BLOG_TECNOLOGIA/imagens/logomarca.jpeg" alt="" width="98" height="98">
+      
+    </div>
     <h1><span class="branco">TECH</span>INSIDER</h1>
     <div class="menu">
       <a href="/pagina inicial/index.html">Pagina inicial</a>
@@ -24,24 +29,31 @@
 </header>
 
 <body>
-    <div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non autem alias, quae saepe omnis dolore veritatis cumque. Recusandae quibusdam quasi maxime veniam deserunt saepe dolor maiores! Necessitatibus tenetur minus nemo?</p>
+  <div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non autem alias, quae saepe omnis dolore veritatis
+      cumque. Recusandae quibusdam quasi maxime veniam deserunt saepe dolor maiores! Necessitatibus tenetur minus nemo?
+    </p>
 
     <img src="imagens2.0/img-startup.webp" style="height: 300px;">
-    </div>
+  </div>
 
-    <section class="equipe">
-        <h2>Equipe</h2>
-        <div>
-            <img src="imagens2.0/amauri.png" alt="">
-            <p></p>
-            <img src="imagens2.0/joaopedro.png" alt="">
-            <p></p>
-        </div>
-    </section>
+  <section class="equipe">
+    <h2>Equipe</h2>
+    <div>
+      <img src="imagens2.0/amauri.png" alt="">
+      <p></p>
+      <img src="imagens2.0/joaopedro.png" alt="">
+      <p></p>
+      <img src="./imagem_equipe/foto_jeferson_r.jpg" alt="" width="300" height="300">
+      <section>
+        <p>Jeferson Rodrigues</p>
+      </section>
+    </div>
+  </section>
 </body>
 
 <div class="footer">
-    <p>TECH INSIDER - 2024 - Todos os direitos reservados.</p>
-  </div>
+  <p>TECH INSIDER - 2024 - Todos os direitos reservados.</p>
+</div>
+
 </html>
