--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/sobre.html
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/sobre.html
@@ -4,56 +4,71 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>TECHINSIDER</title>
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-  <link rel="shortcut icon" href="">
+  <link rel="shortcut icon" href="" />
 </head>
-</head>
-
-<header>
-  <div class="header">
-    <div class="logo">
-      <img src="/PI_G2_BLOG_TECNOLOGIA/imagens/logomarca.jpeg" alt="" width="98" height="98">
-      
-    </div>
-    <h1><span class="branco">TECH</span>INSIDER</h1>
-    <div class="menu">
-      <a href="/pagina inicial/index.html">Pagina inicial</a>
-      <a href="/artigos/artigos.html">Artigos</a>
-      <a href="/comunidade/comunidade.html">Comunidade</a>
-      <a href="/newsletter/newsletter.html">Newsletter</a>
-      <a href="/sobre/sobre.html">Sobre</a>
-    </div>
-  </div>
-</header>
 
 <body>
-  <div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non autem alias, quae saepe omnis dolore veritatis
-      cumque. Recusandae quibusdam quasi maxime veniam deserunt saepe dolor maiores! Necessitatibus tenetur minus nemo?
-    </p>
-
-    <img src="imagens2.0/img-startup.webp" style="height: 300px;">
-  </div>
-
-  <section class="equipe">
-    <h2>Equipe</h2>
-    <div>
-      <img src="imagens2.0/amauri.png" alt="">
-      <p></p>
-      <img src="imagens2.0/joaopedro.png" alt="">
-      <p></p>
-      <img src="./imagem_equipe/foto_jeferson_r.jpg" alt="" width="300" height="300">
-      <section>
-        <p>Jeferson Rodrigues</p>
-      </section>
+  <header>
+    <div class="header">
+      <div class="logo">
+        <img src="/PI_G2_BLOG_TECNOLOGIA/imagens/logomarca.jpeg" alt="" width="95" height="95">
+      </div>
+      <h1><span class="branco">TECH</span>INSIDER</h1>
+      <div class="menu">
+        <a href="/pagina inicial/index.html">Pagina inicial</a>
+        <a href="/artigos/artigos.html">Artigos</a>
+        <a href="/comunidade/comunidade.html">Comunidade</a>
+        <a href="/newsletter/newsletter.html">Newsletter</a>
+        <a href="/sobre/sobre.html">Sobre</a>
+      </div>
     </div>
-  </section>
+  </header>
+
+  <main>
+    <div class="text">
+      <p>
+      <h2>Unidos, <span>criamos negócios inspiradores</span> ao redor do mundo.</h2><br>
+
+      Nossa trajetória começa de forma similar à de muitos de nossos clientes: um grupo de indivíduos apaixonados por
+      uma ideia, que encontrou no mundo digital um meio para crescer e evoluir. <br>
+
+      Desde a nossa fundação, a <strong>TECH</strong> não apenas aumentou sua equipe, mas também se tornou um dos grupos
+      mais dinâmicos do mercado - a plataforma favorita das empresas que desejam fazer a diferença! <br>
+
+      Como alcançamos isso? Através de nossos produtos, materiais educativos e ecossistema, capacitamos heróis e
+      heroínas que impulsionam a economia, deixando um legado de relações valiosas, resultados notáveis e parcerias
+      duradouras.</p>
+      <section class="foto-startup">
+        <img src="./imagem_equipe/imagem-startup3.jpeg" alt="" width="400px" height="300">
+        <img src="./imagem_equipe/imagem-startup.jpeg" width="400px" height="300">
+        <img src="./imagem_equipe/imagem-startup2.jpeg" alt="" width="400px" height="300">
+      </section>
+
+    </div>
+
+    <section class="equipe" id="logo">
+      <h1>Equipe</h1>
+      <div id="img-equipe">
+        <img src="./imagem_equipe/foto_jeferson_r.jpg" alt="" width="300" height="300">
+        <p>Foto Amauri</p>
+        <img src="./imagem_equipe/foto_jeferson_r.jpg" alt="" width="300" height="300">
+        <p>Jeferson Rodrigues</p>
+        <img src="./imagem_equipe/foto_jeferson_r.jpg" alt="" width="300" height="300">
+        <p>Foto João</p>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="footer">
+      <p>TECH INSIDER - 2024 - Todos os direitos reservados.</p>
+    </div>
+  </footer>
+
 </body>
 
-<div class="footer">
-  <p>TECH INSIDER - 2024 - Todos os direitos reservados.</p>
-</div>
 
-</html>
+
+</htm
