--- a/newsletter.html
+++ b/newsletter.html
@@ -4,32 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./newsletter.css">
 </head>
 <body>
-    <header>
 
-
-    </header>
-
-    <section>
-        <img src="imagens2.0/logomarca.jpeg" style="height: 200px;">
-        <h2>Preencha os campos e esteja conectado com o mundo da tecnologia</h2>
-
-        <form action="">
-            <div class="nome">
-                <label for="nome">Digite o seu nome:</label>
-                <input type="text" id="nome">
-            </div>
-            <div class="email">
-                <label for="email">Digite o seu email:</label>
-                <input type="email" id="email">
-            </div>
-            <div class="botao">
-                <button type="submit">Assinar</button>
-            </div>
-        </form>
-
+    <div class="center">
+      <div class="imagem">
+      <img src="imagens2.0/logomarca.jpeg" style="width: 70px">
+      </div>
+      <h1>Preencha os campos e esteja conectado com o mundo da tecnologia</h1>
+      <form method="post">
+        <div class="txt_field">
+          <input type="text" required>
+          <span></span>
+          <label>Nome</label>
+        </div>
+        <div class="txt_field">
+          <input type="text" required>
+          <span></span>
+          <label>Email</label>
+        </div>
+        <div class="checkbox">
+            <label><input type="checkbox">Sim, gostaria de me inscrever a TechInsider newsletter.</label>
+        </div>
+        <input type="submit" value="Assinar">
         
-    </section>
-</body>
+      </form>
+    </div>
+
+  </body>
 </html>
