--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/newsletter/newsletter.html
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/newsletter/newsletter.html
@@ -3,48 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>TECHINSIDER</title>
-    <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
-    <link rel="shortcut icon" href="">
+    <title>Document</title>
+    <link rel="stylesheet" href="./newsletter.css">
 </head>
 <body>
-    <header> <div class="header">
-        <div class="logo"></div>
-        <h1><span class="branco">TECH</span>INSIDER</h1>
-        <div class="menu">
-          <a href="/pagina inicial/index.html">Pagina inicial</a>
-          <a href="/artigos/artigos.html">Artigos</a>
-          <a href="/comunidade/comunidade.html">Comunidade</a>
-          <a href="/newsletter/newsletter.html">Newsletter</a>
-          <a href="/sobre/sobre.html">Sobre</a>
-        </div>
+
+    <div class="center">
+      <div class="imagem">
+      <img src="imagens2.0/logomarca.jpeg" style="width: 70px">
       </div>
-    </header>
-
-    <section>
-        <img src="imagens2.0/logomarca.jpeg" style="height: 200px;">
-        <h2>Preencha os campos e esteja conectado com o mundo da tecnologia</h2>
-
-        <form action="">
-            <div class="nome">
-                <label for="nome">Digite o seu nome:</label>
-                <input type="text" id="nome">
-            </div>
-            <div class="email">
-                <label for="email">Digite o seu email:</label>
-                <input type="email" id="email">
-            </div>
-            <div class="botao">
-                <button type="submit">Assinar</button>
-            </div>
-        </form>
-
+      <h1>Preencha os campos e esteja conectado com o mundo da tecnologia</h1>
+      <form method="post">
+        <div class="txt_field">
+          <input type="text" required>
+          <span></span>
+          <label>Nome</label>
+        </div>
+        <div class="txt_field">
+          <input type="text" required>
+          <span></span>
+          <label>Email</label>
+        </div>
+        <div class="checkbox">
+            <label><input type="checkbox">Sim, gostaria de me inscrever a TechInsider newsletter.</label>
+        </div>
+        <input type="submit" value="Assinar">
         
-    </section>
-</body>
+      </form>
+    </div>
 
-<div class="footer">
-    <p>TECH INSIDER - 2024 - Todos os direitos reservados.</p>
-  </div>
+  </body>
 </html>
