--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/comunidade/comunidade.html
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/comunidade/comunidade.html
@@ -12,11 +12,11 @@
         <div class="logo"></div>
         <h1><span class="branco">TECH</span>INSIDER</h1>
         <div class="menu">
-          <a href="/pagina inicial/index.html">Pagina inicial</a>
-          <a href="/artigos/artigos.html">Artigos</a>
-          <a href="/comunidade/comunidade.html">Comunidade</a>
-          <a href="/newsletter/newsletter.html">Newsletter</a>
-          <a href="/sobre/sobre.html">Sobre</a>
+          <a href="../pagina inicial/index.html">Pagina inicial</a>
+          <a href="../artigos/artigos.html">Artigos</a>
+          <a href="../comunidade/comunidade.html">Comunidade</a>
+          <a href="../newsletter/newsletter.html">Newsletter</a>
+          <a href="../sobre/sobre.html">Sobre</a>
         </div>
       </div>
     </header>
