--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/newsletter/newsletter.html
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/newsletter/newsletter.html
@@ -1,18 +1,42 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./newsletter.css">
+  <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+        <title>TECHINSIDER</title>
+        <link rel="stylesheet" type="text/css" href="../newsletter/newsletter.css" media="screen"/>
+        <link rel="shortcut icon" href="/PI_G1_BLOG_TECNOLOGIA/area-decanso-escritorio-google.jpg">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
+<body>
+
+    
+    <header>
+      <nav>
+        <div class="logo">
+          <p><a class="branco">TECH</a>INSIDER</p>
+          <img src="../imagens/logomarca.jpeg" alt="">
+        </div>
+        <ul class="menu">
+          <li><a href="../pagina inicial/index.html">Pagina Inicial</a></li>
+          <li><a href="../artigos/artigos.html">Artigos</a></li>
+          <li><a href="../comunidade/comunidade.html">Comunidade</a></li>
+          <li><a href="../newsletter/newsletter.html">Newsletter</a></li>
+          <li><a href="../sobre/sobre.html">Sobre</a></li>
+        </ul>
+      </nav>
+    </header>
 <body>
 
     <div class="center">
       <div class="imagem">
-      <img src="imagens2.0/logomarca.jpeg" style="width: 70px">
+      <img src="../imagens/logomarca.jpeg" style="width: 70px">
       </div>
-      <h1>Preencha os campos e esteja conectado com o mundo da tecnologia</h1>
+      <h2>Preencha os campos e esteja conectado com o mundo da tecnologia</h2>
       <form method="post">
         <div class="txt_field">
           <input type="text" required>
@@ -33,4 +57,8 @@
     </div>
 
   </body>
+  <div class="footer"> <!-- o footer não esta aparecendo e não identifiquei o que está impedindo, mas como na página só tem o formulário,
+    acredito que deva ser alguma teg dele que esta impedindo que ele apareça. ps: Amauri Jr-->
+    <p>TECH INSIDER - 2024 - Todos os direitos reservados.</p>
+  </div>
 </html>
