--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/sobre.html
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/sobre.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TECHINSIDER</title>
-  <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-  <link rel="shortcut icon" href="" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+        <title>TECHINSIDER</title>
+        <link rel="stylesheet" type="text/css" href="../sobre/sobre.css" media="screen"/>
+        <link rel="shortcut icon" href="/PI_G1_BLOG_TECNOLOGIA/area-decanso-escritorio-google.jpg">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
-
 <body>
-  <header>
-    <div class="header">
-      <div class="logo">
-        <img src="/PI_G2_BLOG_TECNOLOGIA/imagens/logomarca.jpeg" alt="" width="95" height="95">
-      </div>
-      <h1><span class="branco">TECH</span>INSIDER</h1>
-      <div class="menu">
-        <a href="/pagina inicial/index.html">Pagina inicial</a>
-        <a href="/artigos/artigos.html">Artigos</a>
-        <a href="/comunidade/comunidade.html">Comunidade</a>
-        <a href="/newsletter/newsletter.html">Newsletter</a>
-        <a href="/sobre/sobre.html">Sobre</a>
-      </div>
-    </div>
-  </header>
+
+    
+    <header>
+      <nav>
+        <div class="logo">
+          <p><a class="branco">TECH</a>INSIDER</p>
+          <img src="../imagens/logomarca.jpeg" alt="">
+        </div>
+        <ul class="menu">
+          <li><a href="../pagina inicial/index.html">Pagina Inicial</a></li>
+          <li><a href="../artigos/artigos.html">Artigos</a></li>
+          <li><a href="../comunidade/comunidade.html">Comunidade</a></li>
+          <li><a href="../newsletter/newsletter.html">Newsletter</a></li>
+          <li><a href="../sobre/sobre.html">Sobre</a></li>
+        </ul>
+      </nav>
+    </header>
 
   <main>
     <div class="text">
@@ -84,14 +88,11 @@
 
   </main>
 
-  <footer>
-    <div class="footer">
-      <p>TECH INSIDER - 2024 - Todos os direitos reservados.</p>
-    </div>
-  </footer>
-
 </body>
 
 
+<div class="footer">
+  <p>TECH INSIDER - 2024 - Todos os direitos reservados.</p>
+</div>
 
-</htm
+</html>
