css semi-finalizado

--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/artigos/artigos.html
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/artigos/artigos.html
@@ -71,7 +71,7 @@
                     <i class="far calendar"> 23/04/2024</i>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     </p>
-                    <a href="../artigos/manutenção.html" class="btn read-more">Read More</a>
+                    <a href="../artigos/manutenção.html" class="btn read-more">Leia mais...</a>
                 </div>
             </div>
 
