--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/sobre.html
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/sobre.html
@@ -30,7 +30,6 @@
       </nav>
     </header>
 
-  <main>
     <div class="text">
       <p>
       <h2>Unidos, <span>criamos negócios inspiradores</span> ao redor do mundo.</h2><br>
@@ -56,37 +55,28 @@
 
     </div>
 
-    <section class="equipe" id="logo">
-      <h1>Equipe</h1>
-      <div id="img-equipe">
-        <div class="foto-amauri">
-          <img src="./imagem_equipe/goku.jpg" alt="" width="300" height="300">
-        </div>
-        <div class="foto-jeferson">
-          <img src="./imagem_equipe/foto_jeferson_r.jpg" alt="" width="300" height="300">
-        </div>
-        <div class="foto-joao">
-          <img src="./imagem_equipe/vegeta.jpeg" alt="" width="300" height="300">
-        </div>
-      </div>
+    <h2>EQUIPE</h2>
+<section class="equipe">
+<div>
+  <img src="../imagens/amauri.png" alt="">
+  <span> Amauri Jr</span>
+  <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero architecto beatae maxime vitae cupiditate debitis, atque, quod veritatis modi assumenda error qu
+    os voluptatibus aperiam suscipit libero eaque. Praesentium, ex maxime!</p>
+</div>
+<div>
+  <img src="../imagens/joaopedro.png" alt="">
+  <span> João Pedro</span>
+  <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero architecto beatae maxime vitae cupiditate debitis, atque, quod veritatis modi assumenda error qu
+    os voluptatibus aperiam suscipit libero eaque. Praesentium, ex maxime!</p>
+</div>
+<div>
+  <img src="../imagens/foto_jeferson_r-removebg-preview.png" alt="">
+  <span> Jeferson Silva</span>
+  <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero architecto beatae maxime vitae cupiditate debitis, atque, quod veritatis modi assumenda error qu
+    os voluptatibus aperiam suscipit libero eaque. Praesentium, ex maxime!</p>
+</div>
 
-      <section>
-        <div class="descricao" id="alunos">
-          <div id="amuri">
-            <p>Foto Amauri 2 454545 jkjkkklklkkl 000 0000 kkjkj jkkjkjl jkjkjk kjkjkj j jkjkjk kjkjkj jkjkj</p>
-          </div>
-          <div id="jeferson">
-            <p>Jeferson Rodrigues 2 454545 jkjkkklklkkl 000 0000 kkjkj jkkjkjl jkjkjk kjkjkj j jkjkjk kjkjkj jkjkj<< /p>
-          </div>
-          <div id="joao">
-            <p>Foto João Pedro 2 454545 jkjkkklklkkl 000 0000 kkjkj jkkjkjl jkjkjk kjkjkj j jkjkjk kjkjkj jkjkj<< /p>
-          </div>
-        </div>
-      </section>
-
-    </section>
-
-  </main>
+</section>
 
 </body>
 
