desenvolvimento sprint JS + correções e modificações das sprints anteriores

--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/artigos/manutencao.html
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/artigos/manutencao.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TECHINSIDER</title>
-  <link rel="stylesheet" type="text/css" href="newsletter.css" media="screen"/>
+  <link rel="stylesheet" type="text/css" href="manutencao.css" media="screen"/>
   <link rel="shortcut icon" href="/PI_G1_BLOG_TECNOLOGIA/area-decanso-escritorio-google.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
@@ -30,35 +30,16 @@
       </ul>
     </nav>
   </header>
-  
-  <div class="content">
-    <div class="center">
-      <div class="imagem">
-        <img src="../imagens/logomarca.jpeg" style="width: 70px">
-      </div>
-      <h2>Preencha os campos e esteja conectado com o mundo da tecnologia</h2>
-      <form method="post">
-        <div class="txt_field">
-          <input type="text" required>
-          <span></span>
-          <label>Nome</label>
-        </div>
-        <div class="txt_field">
-          <input type="text" required>
-          <span></span>
-          <label>Email</label>
-        </div>
-        <div class="checkbox">
-          <label><input type="checkbox">Sim, gostaria de me inscrever a TechInsider newsletter.</label>
-        </div>
-        <input type="submit" value="Assinar">
-      </form>
-    </div>
-  </div>
-  <footer class="footer">
-    <p>TECH INSIDER - 2024 - Todos os direitos reservados.</p>
-  </footer>
-  <script src="newsletter.js"></script>
+
+  <p>PÁGINA EM MANUTENÇÃO. EM BREVE PÁGINA REFERENTE AO ARTIGO CLICADO NA PÁGINA ANTERIOR</p>
+
+
+  <script src="manutencao.js"></script>
 </body>
+
 </html>
 
+
+<div class="footer">
+  <p>TECH INSIDER - 2024 - Todos os direitos reservados.</p>
+</div>
