--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/sobre.html
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/sobre/sobre.html
@@ -2,33 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-        <title>TECHINSIDER</title>
-        <link rel="stylesheet" type="text/css" href="../sobre/sobre.css" media="screen"/>
-        <link rel="shortcut icon" href="/PI_G1_BLOG_TECNOLOGIA/area-decanso-escritorio-google.jpg">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TECHINSIDER</title>
+  <link rel="stylesheet" type="text/css" href="sobre.css" media="screen"/>
+  <link rel="shortcut icon" href="/PI_G1_BLOG_TECNOLOGIA/area-decanso-escritorio-google.jpg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    
-    <header>
-      <nav>
-        <div class="logo">
-          <p><a class="branco">TECH</a>INSIDER</p>
-          <img src="../imagens/logomarca.jpeg" alt="">
-        </div>
-        <ul class="menu">
-          <li><a href="../pagina inicial/index.html">Pagina Inicial</a></li>
-          <li><a href="../artigos/artigos.html">Artigos</a></li>
-          <li><a href="../comunidade/comunidade.html">Comunidade</a></li>
-          <li><a href="../newsletter/newsletter.html">Newsletter</a></li>
-          <li><a href="../sobre/sobre.html">Sobre</a></li>
-        </ul>
-      </nav>
-    </header>
+  <header>
+    <nav>
+      <div class="logo">
+        <p><a class="branco">TECH</a>INSIDER</p>
+        <img src="../imagens/logomarca.jpeg" alt="">
+      </div>
+      <div class="hamburger" id="hamburger">
+        &#9776; 
+        <!--código que representa o simbolo do menu hambuguer-->
+      </div>
+      <ul class="menu" id="menu">
+        <li><a href="../pagina inicial/index.html">Pagina Inicial</a></li>
+        <li><a href="../artigos/artigos.html">Artigos</a></li>
+        <li><a href="../comunidade/comunidade.html">Comunidade</a></li>
+        <li><a href="../newsletter/newsletter.html">Newsletter</a></li>
+        <li><a href="../sobre/sobre.html">Sobre</a></li>
+      </ul>
+    </nav>
+  </header>
+  
 
     <div class="text">
       <p>
@@ -77,7 +79,7 @@
 </div>
 
 </section>
-
+<script src="sobre.js"></script>
 </body>
 
 
