finalização validações/Dom/Formulário

--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/newsletter/newsletter.html
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/newsletter/newsletter.html
@@ -37,28 +37,30 @@
         <img src="../imagens/logomarca.jpeg" style="width: 70px">
       </div>
       <h2>Preencha os campos e esteja conectado com o mundo da tecnologia</h2>
-      <form method="post">
+      <form id="Formulario" method="post">
         <div class="txt_field">
-          <input type="text" required>
+          <input type="text" id="nome" required>
           <span></span>
           <label>Nome</label>
         </div>
         <div class="txt_field">
-          <input type="text" required>
+          <input type="text" id="email" required>
           <span></span>
           <label>Email</label>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox">Sim, gostaria de me inscrever a TechInsider newsletter.</label>
+          <label><input type="checkbox" id="botaoInscricao">Sim, gostaria de me inscrever a TechInsider newsletter.</label>
         </div>
         <input type="submit" value="Assinar">
       </form>
     </div>
   </div>
+
   <footer class="footer">
     <p>TECH INSIDER - 2024 - Todos os direitos reservados.</p>
   </footer>
   <script src="newsletter.js"></script>
 </body>
 </html>
+
 
