ajuste cor de fundo

--- a/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/comunidade/comunidade.html
+++ b/RELATÓRIOS E SPRINTS/SPRINT 2 HTML E CSS/comunidade/comunidade.html
@@ -33,15 +33,12 @@
 
   <section class="container"> 
     <div class="banner">
-      
-        <img id="slide-1" src="../imagens/banner-comunidade.jpg"/>
-<p>SEJA BEM VINDO(A) A NOSSA COMUNIDADE</p> <!--ESSE TEXTO FICARÁ DENTRO DO BANNER, NÃO SERÁ TAG. PS: Amauri Jr-->
-
+        <img id="slide-1" src="banner_comunidade.png"/>
      </div>
 
   </section>
 
-  <div class="content clearfix"> <!-- não tem tag correpondente no css-->
+  <div class="content-clearfix"> <!-- não tem tag correpondente no css-->
     <div class="main-content">
         <h1 class="recent-post-title"> Recent Posts</h1>
 
